# opspy-job-scraper

./: .env  .env.example  Dockerfile  README.md  pyproject.toml  state.json
.github/workflows/: docker-publish.yml
opspy_job_scraper/: __init__.py  schema.prisma
opspy_job_scraper/common/: base_logger.py
opspy_job_scraper/database/: __init__.py
opspy_job_scraper/prisma/: actions.py  bases.py  client.py  enums.py  metadata.py  models.py  types.py
opspy_job_scraper/scrape/: __init__.py
opspy_job_scraper/state/: __init__.py  state_storage.py
